samples/_failures_safe/1761254999_3afb5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dde6802d.c: In function ‘parse_primary’:
./samples/SAFE/__tmp_dde6802d.c:174:9: error: expected declaration or statement at end of input
  174 |         node->type = NODE_IDENTIFIER;
      |         ^~~~
./samples/SAFE/__tmp_dde6802d.c:174:9: error: expected declaration or statement at end of input
